# alekhah

./: .gitignore  ingestion.py  llm.py  main.py  pyproject.toml  qa.py
documents/: BRD.md
