[project]
name = "alekhah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "pypdf2",
    "langchain-google-genai>=3.0.3",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "tools>=1.0.10",
    "pymupdf>=1.26.6",
    "langchain-huggingface>=1.0.1",
    "sentence-transformers>=5.1.2",
]
